fix: popup on mobile screen

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -783,6 +783,7 @@ body {
   .popup__content {
     height: auto;
     width: 86%;
+    margin-top: 10%;
   }
 }
 .popup__left {
