--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -39,7 +39,7 @@
         @include respond(phone) {
             height: auto;
             width: 86%;
-            // padding-top: 10vh;
+            margin-top: 10%;
         }
     }
 
